added logic in register

--- a/React JS/Project/capstone/src/component/Register/Register.module.css
+++ b/React JS/Project/capstone/src/component/Register/Register.module.css
@@ -47,3 +47,9 @@ margin-top: 5px;
   color: greenyellow;
   text-decoration: none;
 }
+
+/* .register_input:hover {
+  border: 2px solid red;
+  outline: none; 
+}
+ */
