--- a/React JS/Project/capstone/src/component/Card/Card.module.css
+++ b/React JS/Project/capstone/src/component/Card/Card.module.css
@@ -1,17 +1,23 @@
 .card {
   width: 150px;
-  aspect-ratio: 1 / 1; /* ensures square shape */
+  aspect-ratio: 1 / 1;
   padding: 10px;
   border-radius: 15px;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between; /* evenly distributes title and image */
+  justify-content: space-between;
   color: white;
   box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-  transition: transform 0.2s;
+  transition: transform 0.2s, border 0.2s;
   box-sizing: border-box;
+  border: 2px solid transparent;  
+}
+
+.selectedCard {
+  border: 2px solid yellowgreen;  
+  transform: scale(1.05);   
 }
 
 
